media queries for home page, product panels

--- a/frontend/src/screens/HomeScreen.css
+++ b/frontend/src/screens/HomeScreen.css
@@ -10,7 +10,25 @@
     margin-left: 8px;
 }
 
-.homescreen__products{
+.homescreen__products {
     display: grid;
-    grid-template-columns: repeat (4, 1fr);
-}
+    grid-template-columns: repeat(4, 1fr);
+  }
+  
+  @media (max-width: 1232px) {
+    .homescreen__products {
+      grid-template-columns: repeat(3, auto);
+    }
+  }
+  
+  @media (max-width: 950px) {
+    .homescreen__products {
+      grid-template-columns: repeat(2, auto);
+    }
+  }
+  
+  @media (max-width: 630px) {
+    .homescreen__products {
+      grid-template-columns: 1fr;
+    }
+  }
