--- a/frontend/src/components/Product.css
+++ b/frontend/src/components/Product.css
@@ -2,11 +2,13 @@
     width: 300px;
     padding: 1rem;
     background: #fff;
-    box-shadow: 0 1px 3px rgba (0,0,0,0.4);
+    cursor: pointer;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
     margin: 8px auto;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-between;
+    flex-direction: column;
 }
 
 .product > img {
@@ -47,3 +49,57 @@
     background: #171717;
     color: #f4f4f4;
 }
+
+@media (max-width: 1232px) {
+    .product {
+      width: 360px;
+    }
+  }
+  
+  @media (max-width: 1115px) {
+    .product {
+      width: 330px;
+    }
+  }
+  
+  @media (max-width: 1028px) {
+    .product {
+      width: 300px;
+    }
+  }
+  
+  @media (max-width: 950px) {
+    .product {
+      width: 400px;
+    }
+  }
+  
+  @media (max-width: 830px) {
+    .product {
+      width: 330px;
+    }
+  }
+  
+  @media (max-width: 700px) {
+    .product {
+      width: 290px;
+    }
+  }
+  
+  @media (max-width: 630px) {
+    .product {
+      width: 450px;
+    }
+  }
+  
+  @media (max-width: 500px) {
+    .product {
+      width: 350px;
+    }
+  }
+  
+  @media (max-width: 400px) {
+    .product {
+      width: 300px;
+    }
+  }
